Mise à jour des traductions et amélioration du système de messagerie
- Ajout des traductions pour le modal GDPR en français, espagnol et néerlandais afin d'améliorer l'expérience utilisateur multilingue.
- Révision du système de messagerie pour garantir la bonne gestion des envois d'emails.
- Correction de divers bogues mineurs liés à la gestion des préférences de localisation et à la persistance des données.